# nl2uri

./: .gitignore  CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
nl2uri/: domain_registry.py
tests/: conftest.py  test_weather_forecast.py
tests/integration/: test_nl2a_e2e.py
