[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2uri"
version = "0.5.6"
description = "Natural language to URI Tree planning and nl2a pipeline CLI"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "uri3",
    "uri2flow",
    "resource-agent-hypervisor",
    "resource-agent-factory",
    "httpx>=0.27",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.26.7",
]

[project.scripts]
nl2uri = "nl2uri.cli:main"
nl2a = "nl2a.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nl2uri*", "nl2a*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
uri3 = { path = "../uri3", editable = true }
uri2flow = { path = "../uri2flow", editable = true }
resource-agent-hypervisor = { path = "../resource-agent-hypervisor", editable = true }
resource-agent-factory = { path = "../resource-agent-factory", editable = true }

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
